<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hotfox_bg_main"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingStart="@dimen/hotfox_screen_inset"
    android:paddingTop="28dp"
    android:paddingEnd="@dimen/hotfox_screen_inset"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/tv_always_on_kicker"
        style="@style/HotFoxTextBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotfox_always_on_heading" />

    <TextView
        android:id="@+id/tv_always_on_title"
        style="@style/HotFoxTextDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/hotfox_always_on_heading"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_always_on_body"
        style="@style/HotFoxTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hotfox_always_on_body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical">

        <TextView
            style="@style/HotFoxTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotfox_always_on_status" />

        <TextView
            android:id="@+id/tv_always_on_status"
            style="@style/HotFoxTextHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/hotfox_always_on_unknown" />

        <TextView
            style="@style/HotFoxTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/hotfox_always_on_kill_switch" />

        <TextView
            android:id="@+id/tv_always_on_kill"
            style="@style/HotFoxTextHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/hotfox_always_on_unknown" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_always_on_shield"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_hotfox_line_shield" />

    <TextView
        android:id="@+id/tv_always_on_help"
        style="@style/HotFoxTextMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hotfox_always_on_help" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_always_on_open"
        style="@style/HotFoxCtaPrimary"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/hotfox_always_on_open" />
</LinearLayout>
